k8s/default-maoning-api-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: maoning-api-proxy
  namespace: default
spec:
  type: ExternalName
  externalName: maoning-api.maoning.svc.cluster.local
  ports:
    - name: http
      port: 5000
      targetPort: 5000
