k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maoning-api
  namespace: maoning
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.njwjxy.cn
      secretName: ingress-tls
  rules:
    - host: www.njwjxy.cn
      http:
        paths:
          - path: /maoning
            pathType: Prefix
            backend:
              service:
                name: maoning-api
                port:
                  number: 5000
